@@ -1,7 +1,11 @@
 11/11/2003
 	- Store a weak reference to the Cache in the CacheCleaner thread, and
 	  kill the thread when the Cache is finalized.
-	  (suggested by Joseph Shraibman <jks@iname.com>
+	  (suggested by Joseph Shraibman <jks@iname.com>)
+
+	- When a Lookup uses a null cache, the temporary cache it creates
+	  should not have a CacheCleaner thread.
+	  (based on a suggestion by Joseph Shraibman <jks@iname.com>)
 
 10/31/2003
 	- Record.hashCode() didn't return consistent hash codes, and didn't
